base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: "argocd.argoproj.io/managed-by=openshift-gitops"
