base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  strategy:
    type:
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: quay.io/cmays20/hello-world:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web
