base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-svc
  namespace: hello-world
  labels:
    app: hello-world
spec:
  selector:
      app: hello-world
  ports:
    - name: web
      port: 8080
