base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world-route
spec:
  to:
    kind: Service
    name: hello-world-svc
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
